--- a/style.css
+++ b/style.css
@@ -121,9 +121,11 @@ body {
     padding: 20px;                 /* Inner spacing */
     background-color: #70f0c9;    /* Light background color */
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-    max-width: 300px;              /* Limit the width of the cart */
+    max-width: 600px;              /* Limit the width of the cart */
+    max-height: 300px;
     margin: 20px auto;             /* Center the cart horizontally */
     text-align: left;              /* Align text to the left */
+    overflow-y: auto;
 }
 
 .cart h2 {
